implement email sending

--- a/adapter/src/main/resources/templates/rewarding-email.html
+++ b/adapter/src/main/resources/templates/rewarding-email.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <p>
-  Salut [[${firstName}]],
+  Salut {{firstName}},
   <br/>
   <br/>
-  Tu as participé au concours [[${merchantName}]] et tu as été génial !
+  Tu as participé au concours {{merchantName}} et tu as été génial !
   <br/>
   Quel score, félicitations !
   <br/>
@@ -17,13 +17,13 @@
   <br/>
   Et bonne nouvelle.. Il n'attend plus que toi pour te rejoindre :
   Indique ton adresse postale et ton numéro de téléphone dans la section "gérer les détails du compte" dans l'onglet
-  profil de CHIRO afin que la super équipe de [[${merchantName}]] puisse procéder à son envoi !
+  profil de CHIRO afin que la super équipe de {{merchantName}} puisse procéder à son envoi !
   <br/>
   Vu ta performance, cette récompense va surement en appeler beaucoup d’autres ;)
   <br/>
   <br/>
   PS: Une fois ton cadeau réceptionné, nous te serions vraiment reconnaissant si tu pouvais le publier en story
-  Instagram en taguant le compte de [[${merchantName}]] et nous.
+  Instagram en taguant le compte de {{merchantName}} et nous.
   On pourra ainsi reposter et t’ajouter à notre longue liste des vainqueurs de Chiro 🤩
   <br/>
   PS2: Aurais-tu la gentillesse de nous laisser un avis sur le store ? 🙏 ça nous aiderait énormément ! (Lien =
